Overflow corrected

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 }
 
 header {
-    height: 60vh;
+    min-height: 60vh;
     text-align: center;
     display: flex;
     justify-content: center;
@@ -73,8 +73,8 @@ header p::before {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    width: 100vw;
-    height: 100vh;
+    max-width: 100vw;
+    min-height: 100vh;
 }
 
 .card-container {
@@ -91,7 +91,7 @@ header p::before {
 .card {
     transform-style: preserve-3d;
     
-    width: 24rem;
+    max-width: 24rem;
     min-height: 45rem;
     border-radius: 32px;
     padding: 1.5rem 3rem;
